# django-geoip2-extras

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Pipfile  README  README.md  README.rst  manage.py  pyproject.toml  settings.py  setup.py  tox.ini
.github/workflows/: tox.yml
demo/: settings.py
geoip2_extras/: __init__.py  apps.py  middleware.py  settings.py  tests.py
tests/: settings.py  test_middleware.py  test_settings.py  tests.py
