[tool.poetry]
name = "django-geoip2-extras"
version = "1.2.1"
description = "Additional functionality using the GeoIP2 database."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.rst"
homepage = "https://github.com/yunojuno/django-geoip2-extras"
repository = "https://github.com/yunojuno/django-geoip2-extras"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [{ include = "geoip2_extras" }]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2 || ^3.0"
python-env-utils = "*"
geoip2 = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
black = "==19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
